--- a/Final Capstone Project Proposal.ipynb
+++ b/Final Capstone Project Proposal.ipynb
@@ -4,41 +4,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*** Provide links to different sources of data etc.\n",
-    "\n",
-    "\n",
     "#### What is the problem you are attempting to solve? \n",
-    "   To provide an analysis of the different implementations and combinations of machine learning algorithms to make buys and sells of various stocks in a portfolio.\n",
+    "   \n",
+    "   To Create a profitable algorithm leveraging Quantopian's investment platform. The platform provides users with an integrated Python environment from which the user may backtest the algorithm(s) on historical stock prices. Quantopian also provides many free and paid-for data sets and built in functions like Simple Moving Average calculator, for example. \n",
     "    \n",
     "#### How is your solution valuable?\n",
     "   The end goal is to have a solution that will generate positive gains over time in the stock market while meeting Quantopian's Contest Criteria: https://www.quantopian.com/open\n",
+    "     \n",
+    "   If these criteria are met, the algorithm is evaluated for the possibility for licensing to Quantopian. If licensed, capital is allocated (starting allocations average approximately five million dollars per algorithm), and the author receives ten percent of the net profit. \n",
     "   \n",
-    "   Being able to provide predictive analytics on stock market movers (blah blah)\n",
-    "    \n",
+    "#### Important Information from Quantopian's Contest Page\n",
+    "\"\n",
+    "Process\n",
+    "\n",
+    "A new contest is started at the beginning of each month. Contest entries are paper traded for 6 months. At the end of the 6 months, the winner is announced.\n",
+    "\n",
+    "While the Quantopian Open is limited to one winner per month, our allocations are not. We want dozens of algorithms, and anyone meeting the low beta and consistent-returns filters is well-positioned for those rewards.\n",
+    "\n",
+    "It is a rolling competition. All entries are automatically entered in every subsequent contest, unless withdrawn.\n",
+    "\n",
+    "If you win, the overall performance of your algorithm during the prize period will be public - other people will want to see how you are doing!\n",
+    "\n",
+    "Judging\n",
+    "\n",
+    "Your algorithm's performance must have low correlation to the general market's performance. This correlation is calculated as the beta-to-SPY, and it must be between 0.3 and -0.3. The algorithms that meet this requirement are placed at the top of the leaderboard and are marked with a badge.\n",
+    "\n",
+    "Your algorithm must be hedged. It should hold both long and short positions simultaneously, or be entirely in cash. Hedged strategies reduce their market risk and correlation risk to individual positions. These algorithms are placed at the top of the leaderboard and are marked with a badge.\n",
+    "\n",
+    "Your algorithm must have positive returns. It must make trades in both paper trading and backtesting. Algorithms meeting this criterion also are placed at the top of the leaderboard and are marked with a badge.\n",
+    "\n",
+    "To generate your algorithm's score, its live trading performance is ranked against all of the other entries on the 7 criteria listed below. The ranks are averaged and scored on a scale of 0 to 100. Your score is quite volatile in the days immediately after you make your entry, and your score smooths out as your entry runs for a longer time period.\n",
+    "\n",
+    "The best way to evaluate your algorithm is to use our backtest analysis tool to generate a 'tear sheet.' The tear sheet is chock-full of staticstics and comparisons to help you evaluate your algorithm's performance. It's the same tool that we use at Quantopian to evaluate algorithms for allocation.\n",
+    "\n",
+    "These criteria were picked to encourage algorithm creation that matches our allocation interests.\n",
+    "\n",
+    "Sharpe Ratio: The gold standard of performance metrics. Penalizes an algorithm if it takes excessive risk to achieve its return. Higher Sharpe is better.\n",
+    "\n",
+    "Annualized volatility: Lower volatility is better.\n",
+    "\n",
+    "Annualized returns: The algorithm has to make money.\n",
+    "\n",
+    "Max Drawdown: The greatest loss suffered from a peak in equity to its subsequent trough. By minimizing drawdown, Participant's algorithm can better compound gains.\n",
+    "\n",
+    "Stability of Return: This measures how consistently an algorithm generates its profits over time. (Mathematically, the R-squared of the linear regression line drawn through the algorithm's equity curve based on log-returns).\n",
+    "\n",
+    "Sortino Ratio: Annual Return / standard deviation of negative returns. This is a quick way to compare across algorithms how long it might take to get back above its high-water mark after suffering a loss equal to its historical max drawdown. A large Sortino ratio indicates a low probability of a large loss.\n",
+    "\n",
+    "Beta-to-SPY: How connected your algorithm is to swings in the value of SPY.\n",
+    "\n",
+    "Important Rules\n",
+    "Your algorithm must keep its leverage under three. If your leverage exceeds three, in backtest or paper trading, your entry will be disqualified. You can track your leverage using context.account.leverage.\n",
+    "\n",
+    "Your algorithm must use the default commission model. We will assign a custom slippage model of $0.001/share for judging. If you would like to test your algorithm with this commission model, you can use set_commission(commission.PerShare(cost=0.001, min_trade_cost=0)).\n",
+    "\n",
+    "Your algorithm can't use fetcher. The Participant's algorithm must not use the fetch_csv() feature. (If you have a data source or signal that you think should be available for the contest, please tell us about it at feedback@quantopian.com)\n",
+    "\n",
+    "Your algorithm can't trade leveraged ETFs or ETNs. The Participant's algorithm must not trade in leveraged ETFs, such as the Ultra S&P500 or Ultra Dow30. To avoid trading these assets, use the set_do_not_order() trading guard. You can also use the QTradableStocksUS, which doesn't contain any ETFs, as your base universe.\n",
+    "\n",
+    "If your algorithm crashes, your entry will be disqualified.\n",
+    "\n",
+    "Each person is limited to three entries. If you want to enter a fourth time, you will need to stop one of your existing entries to make room.\n",
+    "\n",
+    "There is no fee for entry. You can read the full set of contest rules here. https://www.quantopian.com/open/rules\n",
+    "\"\n",
+    "\n",
     "#### What is your data source and how will you access it?\n",
-    "   1) Quantopian's Python environment provides access to US equities priced at a minute level and point-in-time corporate fundamentals. Additionally, custom time-series data (such as Quandl) can be imported onto the platform. \n",
-    "   *** talk about different data sets and if / how to create and utilize your own data\n",
+    "\n",
+    "   The project will utilize Quantopian's provided open-sourced backtesting engine (Zipline) and free data sources from Quantopian (provided by Morningstar), which consists of over 600 metrics measuring the financial performance of companies and is derived from their public filings. The data is split- and dividend-adjusted.\n",
     "   \n",
-    "   2) If Quantopian is not an approved environment / data source, Yahoo finance will be used to collect data on a multitude of stocks. \n",
-    "   *** talk about crawling the Yahoo finance api, etc.\n",
+    "   The data will be accessed using Quantopian's Pipeline API. \n",
+    "\n",
     "    \n",
     "#### What techniques from the course do you anticipate using?\n",
     "\n",
-    "*** Write this as a sequence. Scraping will come first, etc. What do you expect to end up with? How will everything come together to make a single prediction?\n",
+    "   The first technique used will be scraping Google News API to capture public and professional investor sentiment of the stocks utilized in the Quantopian Universe Q1500US (https://www.quantopian.com/posts/working-on-our-best-universe-yet-qtradablestocksus). \n",
+    "    \n",
+    "   This information will be used in an Unsupervised Machine Learning approach to generate investor sentiment to aid in the weighting of stock allocations. \n",
     "\n",
-    "   Supervised ML: Leverage different Supervised ML techniques to train and predict stock market movers.\n",
-    "   \n",
-    "   Scraping: Utilizing Scrapy to crawl news articles about stocks from Google news api.\n",
-    "   \n",
-    "   Unsupervised ML: Natural Language Processing of news articles from Google news api to get public / professional sentiment of stocks. Clustering analysis of stocks to determine clusters of gains and losses.\n",
-    "   *** Explain how you would do this\n",
-    "   \n",
-    "   Neural Networks: Neural Networks will be used both for sentiment analysis of the news articles as well as implementations of regression models for stock market predictions.\n",
+    "   Supervised Machine Learning will be utilized to develop prediction models to determine whether to buy or sell stocks in the Universe.\n",
+    "    \n",
+    "   Neural Networks will also be used as an alternative to the Unsupervised and Supervised Machine Learning approaches mentioned previously to determine the best approach.\n",
+    "\n",
+    "   The ideal outcome will be a project that utilizes the information gained from the various approaches mentioned in this proposal to generate predictive analytics that produce profitable returns over time.\n",
     "    \n",
     "#### What do you anticipate will be the biggest challenge you'll face?\n",
-    "   Analyzing historical news articles for sentiment analysis. It will be a very large amount of data to process. If this does not work, the sentiment analysis can be utilized on current to future news articles to improve the model over time. *** Discuss how to overcome this challenge - i.e. reduce number of features, etc.\n",
+    "   1) Analyzing historical news articles for sentiment analysis. It will be a very large amount of data to process. If this does not work, the sentiment analysis can be utilized on current to future news articles to improve the model over time. \n",
+    "   One way to overcome the challenge of computational overload is to reduce the number of features utilized, or restrict the crawling to sectors rather than to specific stocks.\n",
     "   \n",
-    "   Adhering to the Quantopian Contest Criteria - Beta-SPY, Sharpe Ratio, Annualized Volatility, Annualized Returns, Max Drawdown, Stability of Return, Sortino Ratio. *** Add a link to the explanation of criteria. Explain what the criteria are some more. Explain why it will be a challenge to meet the criteria."
+    "   2) Adhering to the Quantopian Contest Criteria as described in the \"Important Information from Quantopian's Contest Page.\" This will be difficult because it creates guidelines within which the model must perform in order to be eligible for capital allocation. \n",
+    "   \n",
+    "   3) Collectively utilizing the insights drawn from the different approaches to provide one clean output."
    ]
   }
  ],
