--- a/Final Capstone Project Proposal.ipynb
+++ b/Final Capstone Project Proposal.ipynb
@@ -13,9 +13,41 @@
     "     \n",
     "   If these criteria are met, the algorithm is evaluated for the possibility for licensing to Quantopian. If licensed, capital is allocated (starting allocations average approximately five million dollars per algorithm), and the author receives ten percent of the net profit. \n",
     "   \n",
+    "\n",
+    "#### What is your data source and how will you access it?\n",
+    "\n",
+    "   The project will utilize Quantopian's provided open-sourced backtesting engine (Zipline) and free data sources from Quantopian (provided by Morningstar), which consists of over 600 metrics measuring the financial performance of companies and is derived from their public filings. The data is split- and dividend-adjusted.\n",
+    "   \n",
+    "   The data will be accessed using Quantopian's Pipeline API. \n",
+    "\n",
+    "    \n",
+    "#### What techniques from the course do you anticipate using?\n",
+    "\n",
+    "   The first technique used will be scraping Google News API to capture public and professional investor sentiment of the stocks utilized in the Quantopian Universe Q1500US (https://www.quantopian.com/posts/working-on-our-best-universe-yet-qtradablestocksus). \n",
+    "    \n",
+    "   This information will be used in an Unsupervised Machine Learning approach to generate investor sentiment to aid in the weighting of stock allocations. \n",
+    "\n",
+    "   Supervised Machine Learning will be utilized to develop prediction models to determine whether to buy or sell stocks in the Universe.\n",
+    "    \n",
+    "   Neural Networks will also be used as an alternative to the Unsupervised and Supervised Machine Learning approaches mentioned previously to determine the best approach.\n",
+    "\n",
+    "   The ideal outcome will be a project that utilizes the information gained from the various approaches mentioned in this proposal to generate predictive analytics that produce profitable returns over time.\n",
+    "    \n",
+    "#### What do you anticipate will be the biggest challenge you'll face?\n",
+    "   1) Analyzing historical news articles for sentiment analysis. It will be a very large amount of data to process. If this does not work, the sentiment analysis can be utilized on current to future news articles to improve the model over time. \n",
+    "   \n",
+    "   One way to overcome the challenge of computational overload is to reduce the number of features utilized, or restrict the crawling to sectors rather than to specific stocks.\n",
+    "   \n",
+    "   2) Adhering to the Quantopian Contest Criteria as described in the \"Important Information from Quantopian's Contest Page.\" This will be difficult because it creates guidelines within which the model must perform in order to be eligible for capital allocation. \n",
+    "   \n",
+    "   There are functions that are callable from the Quantopian API to check that your algorithm meets these criteria. If any criterion is not met, the algorithm will need to be adjusted accordingly.\n",
+    "   \n",
+    "   3) Collectively utilizing the insights drawn from the different approaches to provide one clean output. \n",
+    "   \n",
+    "   By evaluating the performance of the different algorithms, it will be decided whether to favor the output of certain algorithms over others or to ignore some outputs. For example, if the Supervised Machine Learning model performs well in predicting true positives but poorly in predicting true negatives (sells), then a form of ensemble method will be used to utilize the true positives of the Supervised Machine Learning model in addition to utilizing the true negatives of the Neural Network approach. Comparing the Type I and Type II errors across different models and leveraging the higher performing aspects into one usable output. \n",
+    "   \n",
     "#### Important Information from Quantopian's Contest Page\n",
-    "\"\n",
-    "Process\n",
+    "\"Process\n",
     "\n",
     "A new contest is started at the beginning of each month. Contest entries are paper traded for 6 months. At the end of the 6 months, the winner is announced.\n",
     "\n",
@@ -66,35 +98,7 @@
     "\n",
     "Each person is limited to three entries. If you want to enter a fourth time, you will need to stop one of your existing entries to make room.\n",
     "\n",
-    "There is no fee for entry. You can read the full set of contest rules here. https://www.quantopian.com/open/rules\n",
-    "\"\n",
-    "\n",
-    "#### What is your data source and how will you access it?\n",
-    "\n",
-    "   The project will utilize Quantopian's provided open-sourced backtesting engine (Zipline) and free data sources from Quantopian (provided by Morningstar), which consists of over 600 metrics measuring the financial performance of companies and is derived from their public filings. The data is split- and dividend-adjusted.\n",
-    "   \n",
-    "   The data will be accessed using Quantopian's Pipeline API. \n",
-    "\n",
-    "    \n",
-    "#### What techniques from the course do you anticipate using?\n",
-    "\n",
-    "   The first technique used will be scraping Google News API to capture public and professional investor sentiment of the stocks utilized in the Quantopian Universe Q1500US (https://www.quantopian.com/posts/working-on-our-best-universe-yet-qtradablestocksus). \n",
-    "    \n",
-    "   This information will be used in an Unsupervised Machine Learning approach to generate investor sentiment to aid in the weighting of stock allocations. \n",
-    "\n",
-    "   Supervised Machine Learning will be utilized to develop prediction models to determine whether to buy or sell stocks in the Universe.\n",
-    "    \n",
-    "   Neural Networks will also be used as an alternative to the Unsupervised and Supervised Machine Learning approaches mentioned previously to determine the best approach.\n",
-    "\n",
-    "   The ideal outcome will be a project that utilizes the information gained from the various approaches mentioned in this proposal to generate predictive analytics that produce profitable returns over time.\n",
-    "    \n",
-    "#### What do you anticipate will be the biggest challenge you'll face?\n",
-    "   1) Analyzing historical news articles for sentiment analysis. It will be a very large amount of data to process. If this does not work, the sentiment analysis can be utilized on current to future news articles to improve the model over time. \n",
-    "   One way to overcome the challenge of computational overload is to reduce the number of features utilized, or restrict the crawling to sectors rather than to specific stocks.\n",
-    "   \n",
-    "   2) Adhering to the Quantopian Contest Criteria as described in the \"Important Information from Quantopian's Contest Page.\" This will be difficult because it creates guidelines within which the model must perform in order to be eligible for capital allocation. \n",
-    "   \n",
-    "   3) Collectively utilizing the insights drawn from the different approaches to provide one clean output."
+    "There is no fee for entry. You can read the full set of contest rules here. https://www.quantopian.com/open/rules\""
    ]
   }
  ],
