--- a/Ideas+for+Final+Capstone+Proposal.ipynb
+++ b/Ideas+for+Final+Capstone+Proposal.ipynb
@@ -35,7 +35,7 @@
     "* Has thorough code comments throughout, so developers that extend it in the future can understand the logic behind it.\"\n",
     "\n",
     "### How is your solution valuable?\n",
-    "The software will be purchased by R Zero to be extended and licensed out to healthcare institutions.\n",
+    "The software will be purchased by R Zero to be extended and licensed out to healthcare institutions. The company has already done market research and is in talks with the CDC. \n",
     "\n",
     "### What is your data source and how will you access it?\n",
     "Data wil be gathered by scraping Google News API to get URLs to articles that discuss the onset, diagnoses, spread, etc. of disease. The articles will be scraped for locations, disease and conditions, and number of cases.\n",
@@ -57,8 +57,6 @@
     "Gaining insight into which product lines are in high demand with low competition.\n",
     "\n",
     "### How is your solution valuable?\n",
-    "The solution will enable data-driven decisions for investments into ecommerce businesses. \n",
-    "\n",
     "I will use the insights drawn from this solution to facilitate data-driven decisions for my temporal and monetary investments into building ecommerce businesses. \n",
     "\n",
     "### What is your data source and how will you access it?\n",
@@ -67,18 +65,16 @@
     "Scraping - Articles from Google News to get overall sentiment and interest in different products\n",
     "\n",
     "### What techniques from the course do you anticipate using?\n",
-    "Scraping\n",
+    "The first technique will be scraping APIs and Google News articles to collect the necessary data.\n",
     "\n",
-    "NLP - Unsup. NN \n",
+    "Next, Unsupervised Neural Networks will be utilized to perform Natural Language Processing to extract consumer sentiment of various products.\n",
     "\n",
-    "Classification - NN to determine the \"selling power\" or whatever of a product\n",
+    "Last, Neural Networks will be used to generate a score that depicts the selling potential of various products.\n",
     "\n",
     "### What do you anticipate will be the biggest challenge you'll face?\n",
-    "Narrowing the scope of searches so that it is not too computationally intense.\n",
+    "Narrowing the scope of searches so that it is not too computationally intense. This can be mitigated by using Google Trends and Google News to refine the list of products to scrape social media for. \n",
     "\n",
-    "Finishing the whole project in two weeks.\n",
-    "\n",
-    "Not being pissed that I can't do my original project's proposal. "
+    "Competition - This will require some research into how saturated the market is for a given product."
    ]
   }
  ],
@@ -98,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
