--- a/Ecommerce+Market+Research+Proposal.ipynb
+++ b/Ecommerce+Market+Research+Proposal.ipynb
@@ -4,50 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explain how you will validate your model. \n",
-    "    #### Maybe test accuracy in predicting how accurate it is in pinpointing products that will grow over the next six months.\n",
-    "\n",
-    "\n",
     "#### What is the problem you are attempting to solve?\n",
-    "Gaining insight into which product lines are in high demand with low competition, beginning with a broad focus on technology appliances and narrowing down to a final product line.\n",
+    "One of the barriers to entry in ecommerce is finding a target niche. The solution will aim to provide the user or company with evaluating and determining the highest potential product niche, website name, and keywords to use. \n",
     "\n",
     "#### How is your solution valuable?\n",
-    "I will use the insights drawn from this solution to facilitate data-driven decisions for my temporal and monetary investments into building ecommerce businesses.\n",
-    "\n",
-    "Talk about being able to pitch it to companies. Create a model to generate sales leads / potential customers. \n",
-    "\n",
-    "Being able to predict the rise in popularity of certain products will allow companies to be the first to begin selling that product. \n",
-    "\n",
-    "Try to identify the reasons that certain products are increasing in popularity - maybe a new version comes out or there is a drop in price of certain components, etc. \n",
+    "The solution will be a valuable tool for companies looking to expand their product line and to find new target audiences for advertisements. A model will generate a score that characterizes the sales potential of certain products. Part of this score will be the predicted rise in popularity of a product, so that a company may be able to jump on the opportunity and be the first to begin advertising and selling the product. The solution will also attempt to identify why the product will gain popularity - e.g. Is it a new version of a high-demand product? Is it some new fad that children will be begging their parents to buy them? \n",
     "\n",
     "#### What is your data source and how will you access it?\n",
-    "The data will be collected from multiple APIs in addition to scraping articles from Google News. The APIs that will be used will come from Twitter (https://developer.twitter.com/en/docs/basics/getting-started), Instagram (https://www.instagram.com/developer/endpoints/tags/), Google Trends (https://developers.google.com/gdata/docs/directory), and Google News (https://newsapi.org/s/google-news-api).\n",
-    "\n",
-    "Add Facebook api, maybe get rid of instagram api. \n",
-    "\n",
-    "\n",
+    "The data will be collected from multiple APIs in addition to scraping articles from Google News. The APIs that will be used will come from Twitter (https://developer.twitter.com/en/docs/basics/getting-started), Facebook (http://graph.facebook.com/XYZ, where XYZ is the competitor's name), Google Trends (https://developers.google.com/gdata/docs/directory), and Google News (https://newsapi.org/s/google-news-api).\n",
     "\n",
     "#### What techniques from the course do you anticipate using?\n",
+    "The solution will start with a broad search of keywords related to technology appliances on Google Trends. This data will be collected, and techniques from the Time Series section of Thinkful will be used to model the seasonality of items. \n",
     "\n",
+    "Using this information, the keywords list will be narrowed down and will be used to scrape social media to find the products with the highest interest. This will be accomplished by utilizing Unsupervised Neural Networks to perform Natural Language Processing to determine consumer sentiment of the various products. \n",
     "\n",
-    "### Talk about seasonality. Maybe use some stuff from the Time Series section on Thinkful. \n",
+    "The insights drawn from the NLP technique will become additional features from which a Supervised Neural Network will create a model to predict the rise in consumer interest for a product. \n",
     "\n",
-    "### Explain how you will start broad with Google Trends / Analytics then narrow down to a smaller list of items to crawl social media for. \n",
-    "\n",
-    "The first technique will be scraping APIs and Google News articles to collect the necessary data. This will begin with an analysis of Google Trends data for the most-searched-for products in the category of technology appliances. Once a selection of keywords are searched, social media will be scraped to find the products with the highest interest. \n",
-    "\n",
-    "Next, Unsupervised Neural Networks will be utilized to perform Natural Language Processing to extract consumer sentiment of various products.\n",
-    "\n",
-    "Last, Neural Networks will be used to generate a score that depicts the selling potential of various products.\n",
+    "The final model will be validated for accuracy by comparing the products that were classified as rising in interest to a value pulled from Google Trends that is the increase in interest in the next six months. That is, for Product A at Time T, the data for search interest will be analyzed for time T through T + 6 months. If the model classified the product as rising in interest and the data shows that the model rose by a certain threshold percent (to be determined once the data has been collected), then the model was accurate in classifying that product at time T. \n",
     "\n",
     "#### What do you anticipate will be the biggest challenge you'll face?\n",
     "Narrowing the scope of searches so that it is not too computationally intense. This can be mitigated by using Google Trends and Google News to refine the list of products to scrape social media for.\n",
     "\n",
-    "Competition - This will require some research into how saturated the market is for a given product.\n",
+    "Competition - This will require some research into how saturated the market is for a given product. Facebook will be a useful tool to collect information on competitors in the same market, including how many fans they have, how engaged people are with their product, and what products are liked or disliked the most.\n",
     "\n",
-    "Seasonality\n",
-    "\n",
-    "Tying public interest into number of purchases\n"
+    "Seasonality - Since seasonality can have a large impact on the interest in season-specific items (e.g. swimsuits in Spring / Summer, jackets in Fall / Winter), the seasonality of certain products will be taken into consideration."
    ]
   }
  ],
@@ -67,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
