--- a/Ecommerce+Market+Research+Proposal.ipynb
+++ b/Ecommerce+Market+Research+Proposal.ipynb
@@ -4,36 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# From Alex N\n",
+    "### What is the problem you are attempting to solve?\n",
     "\n",
-    "## Firstly I think you really need to define what you mean by product niche and how you will get information on it. The more you really nail down how you're going to use this since it's such a central crux of your work, the better off you'll be. Social media is a great part of that but it may limit your view somewhat. Also how you do this thoroughly is a challenge. \n",
+    "With the internet becoming increasingly involved in the average person's daily life, many companies have taken to ecommerce, which is the electronic sale of goods through the internet. In order for an entrepreneur to break into the ecommerce market or for a large company to add to their sources of revenue, a niche market must be found. \n",
     "\n",
-    "## On the topic of data, if you subsample too much here you're leaving a lot of information unused, but to use all of the data is a lot of scraping particularly in such a broad domain.\n",
+    "For the sake of clarity in this project, a niche market will be defined using this Wikipedia description:\n",
+    "    \n",
+    "    \"A niche market is the subset of the market on which a specific product is focused. The market niche defines as the product features aimed at satisfying specific market needs, as well as the price range, production quality, and the demographics that is intended to impact. \n",
+    "    \n",
+    "    The niche market is highly specialized, and aiming(sic) to survicve among the competition from numerous super companies. Even established companies create products for different niches, for example, Hewlett-Packard has all-in-one machines for printing, scanning, and faxing targeted for the home office niche while at the same time having separate machines with one of these functions for big businesses.\" \n",
+    "    \n",
+    "With this definition in mind, the problem will be defined as, \"With competition saturating the ecommerce market, what is the best niche market for a business or entrepreneur to expand into?\" \n",
     "\n",
-    "## What is generally missing here is some real specificity on what you're going to be looking at and exactly how these sources link together. At the moment I could interpret this proposal several different ways, some very simple and some almost impossibly complicated. I really need to know more about exactly what you're doing.\n",
+    "To narrow the scope of this project, the focus will be on electronics appliances.\n",
     "\n",
     "\n",
-    "#### What is the problem you are attempting to solve?\n",
+    "### How is your solution valuable?\n",
     "\n",
-    "## What companies will benefit from this? Need to narrow down the niche from the beginning rather than over the course of the project.\n",
+    "The result of this project will be a solution that exceeds the competition (other niche market research tools) in terms of finding the ideal niche market in a given sector. The ideal niche market is one that has a combination of high search volume, has products that are difficult for consumers to find locally, solves a common problem or has a customer base that is passionate, is not overrun with websites that have a PageRank of five or higher (see appendix), and has accessible suppliers. \n",
     "\n",
-    "One of the barriers to entry in ecommerce is finding a target niche. The solution will aim to provide the user or company with evaluating and determining the highest potential product niche, website name, and keywords to use. \n",
+    "The solution will drastically reduce the amount of hours and wages spent for market research and will be a valuable tool for anyone in ecommerce, from large companies to individual entrepreneurs.\n",
     "\n",
-    "#### How is your solution valuable?\n",
-    "The solution will be a valuable tool for companies looking to expand their product line and to find new target audiences for advertisements. A model will generate a score that characterizes the sales potential of certain products. Part of this score will be the predicted rise in popularity of a product, so that a company may be able to jump on the opportunity and be the first to begin advertising and selling the product. The solution will also attempt to identify why the product will gain popularity - e.g. Is it a new version of a high-demand product? Is it some new fad that children will be begging their parents to buy them? \n",
     "\n",
-    "#### What is your data source and how will you access it?\n",
-    "The data will be collected from multiple APIs in addition to scraping articles from Google News. The APIs that will be used will come from Twitter (https://developer.twitter.com/en/docs/basics/getting-started), Facebook (http://graph.facebook.com/XYZ, where XYZ is the competitor's name), Google Trends (https://developers.google.com/gdata/docs/directory), and Google News (https://newsapi.org/s/google-news-api).\n",
+    "### What is your data source and how will you access it?\n",
+    "##### Links to sources in appendix\n",
     "\n",
-    "#### What techniques from the course do you anticipate using?\n",
+    "Initial Information - Facebook, Google News, Google Trends, and Twitter APIs.\n",
+    "\n",
+    "Competition Research - PageRank Status for Chrome\n",
+    "\n",
+    "\n",
+    "### What techniques from the course do you anticipate using?\n",
+    "\n",
+    "The project will begin with a broad search of keywords related to technology appliances on Keyword Planner (see appendix). For example, a keyword search was conducted for \"Consumer Electronics Appliances\" that returned seven hundred keywords with information on their average monthly searches and their level of competition (Low, Medium, or High). This information will be downloaded and filtered to generate a list of keywords that have a high number of average monthly searches and a low rank of competition. \n",
+    "\n",
+    "Google trends will then be used to compare the search trends of the keywords against each other. \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "## Go into further detail on the execution \n",
-    "\n",
-    "## Need to narrow scope of project or it will be too big \n",
-    "\n",
-    "## Further discuss the niche\n",
-    "\n",
-    "## What niche, customers, demographic, industry, etc.\n",
     "\n",
     "## Need to explain how the sources will work together\n",
     "\n",
@@ -52,7 +62,24 @@
     "\n",
     "Competition - This will require some research into how saturated the market is for a given product. Facebook will be a useful tool to collect information on competitors in the same market, including how many fans they have, how engaged people are with their product, and what products are liked or disliked the most.\n",
     "\n",
-    "Seasonality - Since seasonality can have a large impact on the interest in season-specific items (e.g. swimsuits in Spring / Summer, jackets in Fall / Winter), the seasonality of certain products will be taken into consideration."
+    "Seasonality - Since seasonality can have a large impact on the interest in season-specific items (e.g. swimsuits in Spring / Summer, jackets in Fall / Winter), the seasonality of certain products will be taken into consideration.\n",
+    "\n",
+    "\n",
+    "### Appendix\n",
+    "\n",
+    "##### Sources:\n",
+    "Facebook: http://graph.facebook.com\n",
+    "Google Trends: https://developers.google.com/gdata/docs/directory\n",
+    "Google News: https://newsapi.org/s/google-news-api\n",
+    "Keyword Planner: https://adwords.google.com/ko/KeywordPlanner/Home?sourceid=awo&__u=3050284228&__c=9347440984&authuser=0#search\n",
+    "PageRank Status: https://chrome.google.com/webstore/detail/hbdkkfheckcdppiaiabobmennhijkknn\n",
+    "Twitter: https://developer.twitter.com/en/docs/basics/getting-started\n",
+    "\n",
+    "\n",
+    "------------------------------------ Not used yet\n",
+    "http://whois.domaintools.com/thinkful.com\n",
+    "http://tools.seobook.com/\n",
+    "https://docs.aws.amazon.com/AlexaTopSites/latest/ApiReference_TopSitesAction.html"
    ]
   }
  ],
@@ -72,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
