--- a/Ecommerce+Market+Research+Proposal.ipynb
+++ b/Ecommerce+Market+Research+Proposal.ipynb
@@ -38,29 +38,16 @@
     "\n",
     "The project will begin with a broad search of keywords related to technology appliances on Keyword Planner (see appendix). For example, a keyword search was conducted for \"Consumer Electronics Appliances\" that returned seven hundred keywords with information on their average monthly searches and their level of competition (Low, Medium, or High). This information will be downloaded and filtered to generate a list of keywords that have a high number of average monthly searches and a low rank of competition. \n",
     "\n",
-    "Google trends will then be used to compare the search trends of the keywords against each other. \n",
+    "Twitter and Facebook will then be scraped to gather posts that reference the products in the keyword list. With this data, an Unsupervised Neural Network will perform Natural Language Processing to generate sentiment analysis of the products. \n",
+    "\n",
+    "The combined data from all techniques will be used as the features for a Supervised Neural Network that will predict the rise in popularity of a product over a six month period. \n",
+    "\n",
+    "The predictions will be evaluated against the rise in popularity of the product(s) via Google Trends results. \n",
     "\n",
     "\n",
+    "### What do you anticipate will be the biggest challenge you'll face?\n",
     "\n",
-    "\n",
-    "## Go into further detail on the execution \n",
-    "\n",
-    "## Need to explain how the sources will work together\n",
-    "\n",
-    "The solution will start with a broad search of keywords related to technology appliances on Google Trends. This data will be collected, and techniques from the Time Series section of Thinkful will be used to model the seasonality of items. \n",
-    "\n",
-    "Using this information, the keywords list will be narrowed down and will be used to scrape social media to find the products with the highest interest. This will be accomplished by utilizing Unsupervised Neural Networks to perform Natural Language Processing to determine consumer sentiment of the various products. \n",
-    "\n",
-    "The insights drawn from the NLP technique will become additional features from which a Supervised Neural Network will create a model to predict the rise in consumer interest for a product. \n",
-    "\n",
-    "## What is the predicted value that we test against? What are the features you will use?\n",
-    "\n",
-    "The final model will be validated for accuracy by comparing the products that were classified as rising in interest to a value pulled from Google Trends that is the increase in interest in the next six months. That is, for Product A at Time T, the data for search interest will be analyzed for time T through T + 6 months. If the model classified the product as rising in interest and the data shows that the model rose by a certain threshold percent (to be determined once the data has been collected), then the model was accurate in classifying that product at time T. \n",
-    "\n",
-    "#### What do you anticipate will be the biggest challenge you'll face?\n",
-    "Narrowing the scope of searches so that it is not too computationally intense. This can be mitigated by using Google Trends and Google News to refine the list of products to scrape social media for.\n",
-    "\n",
-    "Competition - This will require some research into how saturated the market is for a given product. Facebook will be a useful tool to collect information on competitors in the same market, including how many fans they have, how engaged people are with their product, and what products are liked or disliked the most.\n",
+    "Competition - This will require some research into how saturated the market is for a given product. The competition will be evaluated by using the Google PageRank Status (link in appendix). \n",
     "\n",
     "Seasonality - Since seasonality can have a large impact on the interest in season-specific items (e.g. swimsuits in Spring / Summer, jackets in Fall / Winter), the seasonality of certain products will be taken into consideration.\n",
     "\n",
@@ -99,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
